--- a/practica02.html
+++ b/practica02.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Bootstrap</title>
-	<link rel="stylesheet" type="text/css" href="css/Bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
 	<h1 class="text-center">Practica #02: Tablas en Bootstrap</h1>
