--- a/practica06.html
+++ b/practica06.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Iconos Bootstrap</title>
-	<link rel="stylesheet" type="text/css" href="css/Bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
 	<div class="container">
