--- a/practica06.html
+++ b/practica06.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1 class="text-center">Practica #06: Iconos en bootstrap</h1><hr>
+		<h1 class="text-center">Practica #06: Iconos en Bootstrap</h1><hr>
 		<div class="row">
 			<button class="btn btn-primary btn-lg">
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
